--- a/data/cards/20174189.yaml
+++ b/data/cards/20174189.yaml
@@ -102,6 +102,11 @@ sets:
     set_name: Duelist Revolution
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: CL04-SC121
+    set_name: Classic Pack 04
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
