--- a/data/rush/18764.yaml
+++ b/data/rush/18764.yaml
@@ -27,7 +27,7 @@ summoning_condition:
   zh-CN:
 requirement:
   en: |-
-    Maximum Mode: If you have 10 or more Sea Serpent Type monsters in your Graveyard, send 1 card from the hand to the Graveyard.
+    Maximum Mode: If you have 10 or more Sea Serpent Type monsters in your Graveyard, send 1 card from your hand to the Graveyard.
   de:
   es:
   fr:
@@ -40,7 +40,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains ATK equal to [the ATK of 1 face-up monster on your opponent's field].
+    This card gains ATK equal to [the ATK of 1 face-up monster on your opponent's field] until the end of this turn.
   de:
   es:
   fr:
