--- a/data/rush/18895.yaml
+++ b/data/rush/18895.yaml
@@ -33,7 +33,7 @@ atk: 800
 def: 1000
 images:
 - index: 1
-  image: DragonBird-RDB231-JP-OP.png
+  image: DragonBird-RDB231-JP-C.png
 sets:
   ja:
   - set_number: RD/B231-JP009
