--- a/rush.yaml
+++ b/rush.yaml
@@ -86255,7 +86255,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Fusion Summon a Machine Type monster by sending monsters from your hand or field to the Graveyard as material. That monster gains ATK equal to [its original ATK]. During the End Phase of this turn, you take damage equal to [the amount of ATK gained from this effect].
+    Fusion Summon a Machine Type monster by sending monsters from your hand and/or field to the Graveyard as material. That monster gains ATK equal to [its original ATK]. During the End Phase of this turn, you take damage equal to [the amount of ATK gained from this effect].
   de:
   es:
   fr:
@@ -94262,7 +94262,7 @@ summoning_condition:
   zh-CN:
 requirement:
   en: |-
-    Maximum Mode: If you have 10 or more Sea Serpent Type monsters in your Graveyard, send 1 card from the hand to the Graveyard.
+    Maximum Mode: If you have 10 or more Sea Serpent Type monsters in your Graveyard, send 1 card from your hand to the Graveyard.
   de:
   es:
   fr:
@@ -94275,7 +94275,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains ATK equal to [the ATK of 1 face-up monster on your opponent's field].
+    This card gains ATK equal to [the ATK of 1 face-up monster on your opponent's field] until the end of this turn.
   de:
   es:
   fr:
@@ -95684,7 +95684,7 @@ atk: 0
 def: 1500
 images:
 - index: 1
-  image: CrackNeutron-RDB231-JP-OP.png
+  image: CrackNeutron-RDB231-JP-C.png
 sets:
   ja:
   - set_number: RD/B231-JP006
@@ -95772,7 +95772,7 @@ atk: 800
 def: 1000
 images:
 - index: 1
-  image: DragonBird-RDB231-JP-OP.png
+  image: DragonBird-RDB231-JP-C.png
 sets:
   ja:
   - set_number: RD/B231-JP009
@@ -97384,7 +97384,7 @@ name:
   it:
   pt:
   ja: プルグラース・スピアース
-  ja_romaji:
+  ja_romaji: Purugurāsu Supiāsu
   ko:
   ko_rr:
   zh-TW:
