--- a/data/cards/41510920.yaml
+++ b/data/cards/41510920.yaml
@@ -94,6 +94,11 @@ sets:
     set_name: Duelist Alliance
     rarities:
     - Common
+  zh-CN:
+  - set_number: CL04-SC190
+    set_name: Classic Pack 04
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
