--- a/data/cards/18205590.yaml
+++ b/data/cards/18205590.yaml
@@ -101,6 +101,11 @@ sets:
     set_name: Duelist Alliance
     rarities:
     - Rare
+  zh-CN:
+  - set_number: CL04-SC186
+    set_name: Classic Pack 04
+    rarities:
+    - Prismatic Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
