--- a/data/cards/18326736.yaml
+++ b/data/cards/18326736.yaml
@@ -105,6 +105,11 @@ sets:
     - Ultra Rare
     - Secret Rare
     - Ultimate Rare
+  zh-CN:
+  - set_number: CL04-SC183
+    set_name: Classic Pack 04
+    rarities:
+    - Prismatic Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Limited
