--- a/data/rush/yugipedia908809.yaml
+++ b/data/rush/yugipedia908809.yaml
@@ -7,7 +7,7 @@ name:
   it:
   pt:
   ja: <ruby>魔<rt>ま</rt></ruby><ruby>導<rt>どう</rt></ruby><ruby>騎<rt>き</rt></ruby><ruby>士<rt>し</rt></ruby>－セブンス・チャリオット
-  ja_romaji: Madō Kishi - Sebunsu Chariotto
+  ja_romaji: Madōkishi - Sebunsu Chariotto
   ko:
   ko_rr:
   zh-TW:
