--- a/rush.yaml
+++ b/rush.yaml
@@ -96368,7 +96368,7 @@ name:
   it:
   pt:
   ja: <ruby>魔<rt>ま</rt></ruby><ruby>導<rt>どう</rt></ruby><ruby>騎<rt>き</rt></ruby><ruby>士<rt>し</rt></ruby>－セブンス・チャリオット
-  ja_romaji: Madō Kishi - Sebunsu Chariotto
+  ja_romaji: Madōkishi - Sebunsu Chariotto
   ko:
   ko_rr:
   zh-TW:
@@ -98373,7 +98373,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Fusion Summon by shuffling monsters from your field or Graveyard into the owner's Deck as material, including "Sevens Road Magician".
+    Fusion Summon by shuffling monsters from your field and/or Graveyard into the owner's Deck as material, including "Sevens Road Magician".
   de:
   es:
   fr:
