--- a/rush.yaml
+++ b/rush.yaml
@@ -99239,3 +99239,58 @@ sets:
     rarities:
     - Common
 yugipedia_page_id: 932694
+---
+konami_id:
+name:
+  en: Don A. Corn of the Verdant Vast
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>樹<rt>じゅ</rt></ruby><ruby>海<rt>かい</rt></ruby>の<ruby>首領<rt>ドン</rt></ruby>グーリ
+  ja_romaji: Jukai no Don Gūri
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send 3 Spell/Trap Cards from your field to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Destroy 1 monster on your opponent's field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Beast / Effect
+attribute: EARTH
+level: 2
+atk: 800
+def: 200
+images:
+- index: 1
+  image: DonACornoftheVerdantVast-RDKP13-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP13-JP023
+    set_name: Oblivion of the Flash
+    rarities:
+    - Common
+yugipedia_page_id: 933800
