--- a/data/cards/47484352.yaml
+++ b/data/cards/47484352.yaml
@@ -10,7 +10,7 @@ name:
   ja: アナザー・バース・ドラゴン
   ja_romaji: Anazā Bāsu Doragon
   ko: 어나더 버스 드래곤
-  ko_rr:
+  ko_rr: Eonadeo Beoseu Deuraegon
   zh-TW:
   zh-CN:
 text:
