--- a/data/cards/yugipedia930170.yaml
+++ b/data/cards/yugipedia930170.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If this card is sent from the hand or field to the GY: You can Special Summon 3 "White Fluff Tokens" (Plant/WIND/Level 1/ATK 0/DEF 0) in Defense Position. You can only use this effect of "Dandy White Lion" once per turn, also during the turn you activate this effect, you cannot Special Summon monsters from the Extra Deck.
+    If this card is sent from the hand or field to the GY: You can Special Summon 3 "White Fluff Tokens" (Plant/WIND/Level 1/ATK 0/DEF 0) in Defense Position. You cannot Special Summon monsters from the Extra Deck the turn you activate this effect. You can only use this effect of "Dandy White Lion" once per turn.
   de:
   es:
   fr:
