--- a/data/rush/yugipedia932331.yaml
+++ b/data/rush/yugipedia932331.yaml
@@ -26,7 +26,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains 300 ATK until the end of this turn. Then, if you have 5 or more Galaxy Type monsters in your Graveyard, you can add up to 1 Galaxy Type Normal Monster and up to 1 "Fusion" from your Graveyard to your hand.
+    This card gains 300 ATK until the end of this turn. Then, if you have 5 or more Galaxy Type monsters in your Graveyard, you can add 1 Galaxy Type Normal Monster and/or 1 "Fusion" from your Graveyard to your hand.
   de:
   es:
   fr:
