--- a/data/cards/yugipedia930170.yaml
+++ b/data/cards/yugipedia930170.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: ダンディ・ホワイトライオン
-  ja_romaji: Dandi Howaito Raion
+  ja_romaji: Dandi Howaitoraion
   ko:
   ko_rr:
   zh-TW:
