--- a/data/rush/15178.yaml
+++ b/data/rush/15178.yaml
@@ -72,6 +72,7 @@ images:
   illustration: SevensRoadWitch-G002-JP-VG-artwork-3.png
 - index: 6
   image: SevensRoadWitch-RDKP13-JP-OP.png
+  illustration: SevensRoadWitch-OW-2.png
 sets:
   ja:
   - set_number: RD/VS01-JP001
