--- a/rush.yaml
+++ b/rush.yaml
@@ -2127,6 +2127,7 @@ images:
   illustration: SevensRoadWitch-G002-JP-VG-artwork-3.png
 - index: 6
   image: SevensRoadWitch-RDKP13-JP-OP.png
+  illustration: SevensRoadWitch-OW-2.png
 sets:
   ja:
   - set_number: RD/VS01-JP001
@@ -99294,3 +99295,56 @@ sets:
     rarities:
     - Common
 yugipedia_page_id: 933800
+---
+konami_id:
+name:
+  en: Galactica Addergatling
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ギャラクティカ・アダーガトリング
+  ja_romaji: Gyarakutika Adāgatoringu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Equip this card to 1 face-up Galaxy Type monster on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    The equipped monster gains 200 ATK/DEF and cannot be destroyed by your opponent's Trap Card effects.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Equip
+series:
+- Galactica
+images:
+- index: 1
+  image: GalacticaAddergatling-RDKP13-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP13-JP0??
+    set_name: Oblivion of the Flash
+    rarities:
+    - Common
+yugipedia_page_id: 933894
