--- a/data/cards/34559295.yaml
+++ b/data/cards/34559295.yaml
@@ -52,6 +52,10 @@ sets:
     set_name: 'Structure Deck: Mechanized Madness'
     rarities:
     - Common
+  - set_number: STP5-EN029
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   de:
   - set_number: BLRR-DE034
     set_name: 'Battles of Legend: Relentless Revenge'
@@ -63,6 +67,10 @@ sets:
     - Common
   - set_number: SR10-DE027
     set_name: 'Structure Deck: Mechanized Madness'
+    rarities:
+    - Common
+  - set_number: STP5-DE029
+    set_name: Speed Duel Tournament Pack 5
     rarities:
     - Common
   fr:
@@ -78,6 +86,10 @@ sets:
     set_name: 'Structure Deck: Mechanized Madness'
     rarities:
     - Common
+  - set_number: STP5-FR029
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   it:
   - set_number: BLRR-IT034
     set_name: 'Battles of Legend: Relentless Revenge'
@@ -91,6 +103,10 @@ sets:
     set_name: 'Structure Deck: Mechanized Madness'
     rarities:
     - Common
+  - set_number: STP5-IT029
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   pt:
   - set_number: BLRR-PT034
     set_name: 'Battles of Legend: Relentless Revenge'
@@ -102,6 +118,10 @@ sets:
     - Common
   - set_number: SR10-PT027
     set_name: 'Structure Deck: Mechanized Madness'
+    rarities:
+    - Common
+  - set_number: STP5-PT029
+    set_name: Speed Duel Tournament Pack 5
     rarities:
     - Common
   ja:
