--- a/data/cards/43586926.yaml
+++ b/data/cards/43586926.yaml
@@ -94,6 +94,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
     rarities:
     - Common
+  - set_number: STP5-EN018
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   - set_number: LOD-063
     set_name: Legacy of Darkness
     rarities:
@@ -145,6 +149,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
     rarities:
     - Common
+  - set_number: STP5-DE018
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   fr:
   - set_number: SD1-FR004
     set_name: "Structure Deck: Dragon's Roar"
@@ -190,6 +198,10 @@ sets:
     - Common
   - set_number: SS02-FRA06
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
+    rarities:
+    - Common
+  - set_number: STP5-FR018
+    set_name: Speed Duel Tournament Pack 5
     rarities:
     - Common
   it:
@@ -239,6 +251,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
     rarities:
     - Common
+  - set_number: STP5-IT018
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   pt:
   - set_number: SD1-PT004
     set_name: "Structure Deck: Dragon's Roar"
@@ -263,6 +279,10 @@ sets:
     - Common
   - set_number: SS02-PTA06
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
+    rarities:
+    - Common
+  - set_number: STP5-PT018
+    set_name: Speed Duel Tournament Pack 5
     rarities:
     - Common
   ja:
