--- a/data/cards/45462639.yaml
+++ b/data/cards/45462639.yaml
@@ -56,6 +56,10 @@ sets:
     set_name: 'Speed Duel: Scars of Battle'
     rarities:
     - Super Rare
+  - set_number: STP5-EN021
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   de:
   - set_number: PTDN-DE097
     set_name: Phantom Darkness
@@ -69,6 +73,10 @@ sets:
     set_name: 'Speed Duel: Scars of Battle'
     rarities:
     - Super Rare
+  - set_number: STP5-DE021
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   fr:
   - set_number: PTDN-FR097
     set_name: Phantom Darkness
@@ -82,6 +90,10 @@ sets:
     set_name: 'Speed Duel: Scars of Battle'
     rarities:
     - Super Rare
+  - set_number: STP5-FR021
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   it:
   - set_number: PTDN-IT097
     set_name: Phantom Darkness
@@ -95,11 +107,19 @@ sets:
     set_name: 'Speed Duel: Scars of Battle'
     rarities:
     - Super Rare
+  - set_number: STP5-IT021
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   pt:
   - set_number: SBSC-PT002
     set_name: 'Speed Duel: Scars of Battle'
     rarities:
     - Super Rare
+  - set_number: STP5-PT021
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   ja:
   - set_number: VJMP-JP019
     set_name: V Jump Fall 2006 subscription bonus
