--- a/data/cards/51534754.yaml
+++ b/data/cards/51534754.yaml
@@ -65,6 +65,10 @@ sets:
     set_name: Speed Duel Demo Deck 2020
     rarities:
     - Common
+  - set_number: STP5-EN019
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   - set_number: PGD-071
     set_name: Pharaonic Guardian
     rarities:
@@ -98,6 +102,10 @@ sets:
     set_name: 'Speed Duel: Attack from the Deep'
     rarities:
     - Super Rare
+  - set_number: STP5-DE019
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   fr:
   - set_number: DR1-FR019
     set_name: Dark Revelation Volume 1
@@ -123,6 +131,10 @@ sets:
     set_name: Speed Duel Demo Deck 2020
     rarities:
     - Common
+  - set_number: STP5-FR019
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   it:
   - set_number: DR1-IT019
     set_name: Dark Revelation Volume 1
@@ -144,6 +156,10 @@ sets:
     set_name: 'Speed Duel: Attack from the Deep'
     rarities:
     - Super Rare
+  - set_number: STP5-IT019
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   pt:
   - set_number: DR1-PT019
     set_name: Dark Revelation Volume 1
@@ -165,6 +181,10 @@ sets:
     set_name: 'Speed Duel: Attack from the Deep'
     rarities:
     - Super Rare
+  - set_number: STP5-PT019
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   ja:
   - set_number: 301-019
     set_name: The New Ruler
