--- a/data/cards/68396778.yaml
+++ b/data/cards/68396778.yaml
@@ -48,6 +48,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Twisted Nightmares'
     rarities:
     - Common
+  - set_number: STP5-EN027
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   de:
   - set_number: SOVR-DE062
     set_name: Stardust Overdrive
@@ -55,6 +59,10 @@ sets:
     - Short Print
   - set_number: SS05-DEB24
     set_name: 'Speed Duel Starter Decks: Twisted Nightmares'
+    rarities:
+    - Common
+  - set_number: STP5-DE027
+    set_name: Speed Duel Tournament Pack 5
     rarities:
     - Common
   fr:
@@ -66,6 +74,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Twisted Nightmares'
     rarities:
     - Common
+  - set_number: STP5-FR027
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   it:
   - set_number: SOVR-IT062
     set_name: Stardust Overdrive
@@ -75,9 +87,17 @@ sets:
     set_name: 'Speed Duel Starter Decks: Twisted Nightmares'
     rarities:
     - Common
+  - set_number: STP5-IT027
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   pt:
   - set_number: SS05-PTB24
     set_name: 'Speed Duel Starter Decks: Twisted Nightmares'
+    rarities:
+    - Common
+  - set_number: STP5-PT027
+    set_name: Speed Duel Tournament Pack 5
     rarities:
     - Common
   ja:
