--- a/data/cards/69599136.yaml
+++ b/data/cards/69599136.yaml
@@ -67,6 +67,10 @@ sets:
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
     - Common
+  - set_number: STP5-EN035
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   - set_number: OPTP-EN001
     set_name: Speed Duel Remote Duel Extravaganza Main Event prize cards
     rarities:
@@ -105,6 +109,10 @@ sets:
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
     - Common
+  - set_number: STP5-DE035
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   fr:
   - set_number: TDIL-FR076
     set_name: The Dark Illusion
@@ -133,6 +141,10 @@ sets:
     - Secret Rare
   - set_number: SDBT-FR032
     set_name: 'Structure Deck: Beware of Traptrix'
+    rarities:
+    - Common
+  - set_number: STP5-FR035
+    set_name: Speed Duel Tournament Pack 5
     rarities:
     - Common
   it:
@@ -165,6 +177,10 @@ sets:
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
     - Common
+  - set_number: STP5-IT035
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   pt:
   - set_number: TDIL-PT076
     set_name: The Dark Illusion
@@ -193,6 +209,10 @@ sets:
     - Secret Rare
   - set_number: SDBT-PT032
     set_name: 'Structure Deck: Beware of Traptrix'
+    rarities:
+    - Common
+  - set_number: STP5-PT035
+    set_name: Speed Duel Tournament Pack 5
     rarities:
     - Common
   ja:
