--- a/data/cards/77585513.yaml
+++ b/data/cards/77585513.yaml
@@ -113,6 +113,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: STP5-EN017
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   - set_number: PSV-000
     set_name: Pharaoh's Servant
     rarities:
@@ -196,6 +200,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: STP5-DE017
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   fr:
   - set_number: SDP-F000
     set_name: Pharaoh's Servant
@@ -255,6 +263,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: STP5-FR017
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   it:
   - set_number: SDF-I000
     set_name: Pharaoh's Servant
@@ -314,6 +326,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: STP5-IT017
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   pt:
   - set_number: LCJW-PT023
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
@@ -345,6 +361,10 @@ sets:
     - Ultra Rare
   - set_number: LED7-PT038
     set_name: 'Legendary Duelists: Rage of Ra'
+    rarities:
+    - Common
+  - set_number: STP5-PT017
+    set_name: Speed Duel Tournament Pack 5
     rarities:
     - Common
   ja:
