--- a/data/cards/81977953.yaml
+++ b/data/cards/81977953.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 荒漠龙卷怪
 text:
   en: |-
-    Cannot be Normal Summoned or Set. Must be Special Summoned (from your hand) by banishing 2 WIND and 1 EARTH monsters from your GY. Once per turn: You can discard 1 card, then target 1 Spell/Trap on the field; destroy it.
+    Cannot be Normal Summoned/Set. Must be Special Summoned (from your hand) by banishing 2 WIND and 1 EARTH monsters from your GY. Once per turn: You can discard 1 card, then target 1 Spell/Trap on the field; destroy it.
   de: |-
     Kann nicht als Normalbeschwörung beschworen oder gesetzt werden. Muss als Spezialbeschwörung (von deiner Hand) beschworen werden, indem du 2 WIND und 1 ERDE Monster von deinem Friedhof verbannst. Einmal pro Spielzug: Du kannst 1 Karte abwerfen und dann 1 Zauber/Falle auf dem Spielfeld wählen; zerstöre ihn oder sie.
   es: |-
@@ -53,6 +53,10 @@ sets:
     set_name: 'Speed Duel: Arena of Lost Souls'
     rarities:
     - Ultra Rare
+  - set_number: STP5-EN022
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   de:
   - set_number: TAEV-DE034
     set_name: Tactical Evolution
@@ -63,6 +67,10 @@ sets:
     set_name: 'Speed Duel: Arena of Lost Souls'
     rarities:
     - Ultra Rare
+  - set_number: STP5-DE022
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   fr:
   - set_number: TAEV-FR034
     set_name: Tactical Evolution
@@ -73,6 +81,10 @@ sets:
     set_name: 'Speed Duel: Arena of Lost Souls'
     rarities:
     - Ultra Rare
+  - set_number: STP5-FR022
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   it:
   - set_number: TAEV-IT034
     set_name: Tactical Evolution
@@ -83,11 +95,19 @@ sets:
     set_name: 'Speed Duel: Arena of Lost Souls'
     rarities:
     - Ultra Rare
+  - set_number: STP5-IT022
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   pt:
   - set_number: SBLS-PT019
     set_name: 'Speed Duel: Arena of Lost Souls'
     rarities:
     - Ultra Rare
+  - set_number: STP5-PT022
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   ja:
   - set_number: TAEV-JP034
     set_name: Tactical Evolution
