--- a/data/cards/86188410.yaml
+++ b/data/cards/86188410.yaml
@@ -75,6 +75,10 @@ sets:
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
+  - set_number: STP5-EN001
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Ultra Rare
   - set_number: SGX3-ENA06
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
@@ -120,6 +124,10 @@ sets:
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
+  - set_number: STP5-DE001
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Ultra Rare
   - set_number: SGX3-DEA06
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
@@ -149,6 +157,10 @@ sets:
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
+  - set_number: STP5-FR001
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Ultra Rare
   - set_number: SGX3-FRA06
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
@@ -182,6 +194,10 @@ sets:
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
+  - set_number: STP5-IT001
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Ultra Rare
   - set_number: SGX3-ITA06
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
@@ -199,6 +215,10 @@ sets:
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
+  - set_number: STP5-PT001
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Ultra Rare
   - set_number: SGX3-PTA06
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
