--- a/data/cards/99050989.yaml
+++ b/data/cards/99050989.yaml
@@ -64,6 +64,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Twisted Nightmares'
     rarities:
     - Common
+  - set_number: STP5-EN020
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   - set_number: IOC-026
     set_name: Invasion of Chaos
     rarities:
@@ -89,6 +93,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Twisted Nightmares'
     rarities:
     - Common
+  - set_number: STP5-DE020
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   fr:
   - set_number: DR2-FR026
     set_name: Dark Revelation Volume 2
@@ -108,6 +116,10 @@ sets:
     - Common
   - set_number: SS05-FRB19
     set_name: 'Speed Duel Starter Decks: Twisted Nightmares'
+    rarities:
+    - Common
+  - set_number: STP5-FR020
+    set_name: Speed Duel Tournament Pack 5
     rarities:
     - Common
   it:
@@ -131,6 +143,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Twisted Nightmares'
     rarities:
     - Common
+  - set_number: STP5-IT020
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   pt:
   - set_number: LCJW-PT118
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
@@ -138,6 +154,10 @@ sets:
     - Common
   - set_number: SS05-PTB19
     set_name: 'Speed Duel Starter Decks: Twisted Nightmares'
+    rarities:
+    - Common
+  - set_number: STP5-PT020
+    set_name: Speed Duel Tournament Pack 5
     rarities:
     - Common
   ja:
