--- a/data/cards/03819470.yaml
+++ b/data/cards/03819470.yaml
@@ -89,6 +89,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Match of the Millennium'
     rarities:
     - Common
+  - set_number: STP5-EN031
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   - set_number: MRD-129
     set_name: Metal Raiders
     rarities:
@@ -174,6 +178,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Match of the Millennium'
     rarities:
     - Common
+  - set_number: STP5-DE031
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   fr:
   - set_number: MRD-F129
     set_name: Metal Raiders
@@ -233,6 +241,10 @@ sets:
     - Common
   - set_number: SS04-FRB25
     set_name: 'Speed Duel Starter Decks: Match of the Millennium'
+    rarities:
+    - Common
+  - set_number: STP5-FR031
+    set_name: Speed Duel Tournament Pack 5
     rarities:
     - Common
   it:
@@ -296,6 +308,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Match of the Millennium'
     rarities:
     - Common
+  - set_number: STP5-IT031
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   pt:
   - set_number: PMT-P129
     set_name: Metal Raiders
@@ -323,6 +339,10 @@ sets:
     - Common
   - set_number: SS04-PTB25
     set_name: 'Speed Duel Starter Decks: Match of the Millennium'
+    rarities:
+    - Common
+  - set_number: STP5-PT031
+    set_name: Speed Duel Tournament Pack 5
     rarities:
     - Common
   ja:
