--- a/data/cards/10509340.yaml
+++ b/data/cards/10509340.yaml
@@ -67,6 +67,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-EN007
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   de:
   - set_number: TLM-DE007
     set_name: The Lost Millennium
@@ -89,6 +93,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-DE007
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   fr:
   - set_number: TLM-FR007
     set_name: The Lost Millennium
@@ -111,6 +119,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-FR007
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   it:
   - set_number: TLM-IT007
     set_name: The Lost Millennium
@@ -133,6 +145,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-IT007
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   pt:
   - set_number: TLM-PT007
     set_name: The Lost Millennium
@@ -147,6 +163,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-PT007
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   ja:
   - set_number: TLM-JP007
     set_name: The Lost Millennium
