--- a/data/cards/13093792.yaml
+++ b/data/cards/13093792.yaml
@@ -80,6 +80,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-EN008
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   - set_number: DR04-EN183
     set_name: Dark Revelation Volume 4
     rarities:
@@ -118,6 +122,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-DE008
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   fr:
   - set_number: EOJ-FR003
     set_name: Enemy of Justice
@@ -148,6 +156,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-FR008
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   it:
   - set_number: EOJ-IT003
     set_name: Enemy of Justice
@@ -182,6 +194,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-IT008
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   pt:
   - set_number: DESO-PT009
     set_name: Destiny Soldiers
@@ -195,6 +211,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-PT008
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   ja:
   - set_number: EOJ-JP003
     set_name: Enemy of Justice
