--- a/data/cards/20586572.yaml
+++ b/data/cards/20586572.yaml
@@ -65,6 +65,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-EN011
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   - set_number: DT04-EN059
     set_name: Duel Terminal 4
     rarities:
@@ -103,6 +107,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-DE011
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   fr:
   - set_number: WC07-FR002
     set_name: Yu-Gi-Oh! World Championship 2007 promotional cards
@@ -129,6 +137,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-FR011
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   it:
   - set_number: WC07-IT002
     set_name: Yu-Gi-Oh! World Championship 2007 promotional cards
@@ -155,6 +167,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-IT011
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   pt:
   - set_number: PGLD-PT071
     set_name: Premium Gold
@@ -173,6 +189,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-PT011
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   ja:
   - set_number: WC07-JP002
     set_name: Yu-Gi-Oh! World Championship 2007 promotional cards
