--- a/data/cards/20638610.yaml
+++ b/data/cards/20638610.yaml
@@ -53,6 +53,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
     rarities:
     - Common
+  - set_number: STP5-EN034
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   de:
   - set_number: SDDC-DE036
     set_name: Dragons Collide Structure Deck
@@ -64,6 +68,10 @@ sets:
     - Common
   - set_number: SS02-DEA16
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
+    rarities:
+    - Common
+  - set_number: STP5-DE034
+    set_name: Speed Duel Tournament Pack 5
     rarities:
     - Common
   fr:
@@ -79,6 +87,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
     rarities:
     - Common
+  - set_number: STP5-FR034
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   it:
   - set_number: SDDC-IT036
     set_name: Dragons Collide Structure Deck
@@ -92,6 +104,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
     rarities:
     - Common
+  - set_number: STP5-IT034
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   pt:
   - set_number: SR02-PT035
     set_name: Rise of the True Dragons Structure Deck
@@ -99,6 +115,10 @@ sets:
     - Common
   - set_number: SS02-PTA16
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
+    rarities:
+    - Common
+  - set_number: STP5-PT034
+    set_name: Speed Duel Tournament Pack 5
     rarities:
     - Common
   ja:
