--- a/data/cards/26412047.yaml
+++ b/data/cards/26412047.yaml
@@ -70,6 +70,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP5-EN013
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   - set_number: DT02-EN093
     set_name: Duel Terminal 2
     rarities:
@@ -104,6 +108,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP5-DE013
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   fr:
   - set_number: SOD-FR038
     set_name: Soul of the Duelist
@@ -134,6 +142,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP5-FR013
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   it:
   - set_number: SOD-IT038
     set_name: Soul of the Duelist
@@ -164,6 +176,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP5-IT013
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   pt:
   - set_number: SOD-PT038
     set_name: Soul of the Duelist
@@ -174,6 +190,10 @@ sets:
     set_name: 'Structure Deck: Fury from the Deep'
     rarities:
     - Common
+  - set_number: STP5-PT013
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   ja:
   - set_number: SOD-JP038
     set_name: Soul of the Duelist
