--- a/data/cards/32207100.yaml
+++ b/data/cards/32207100.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 大爆冷门
 text:
   en: |-
-    Tribute 1 face-up Attack Position Level 2 or lower monster you control; return all Level 7 or higher Special Summoned monsters to the hand.
+    Tribute 1 face-up Attack Position Level 2 or lower monster; return all Level 7 or higher Special Summoned monsters to the hand.
   de: |-
     Biete 1 Monster der Stufe 2 oder niedriger in offener Angriffsposition, das du kontrollierst, als Tribut an; gib alle als Spezialbeschwörung beschworenen Monster der Stufe 7 oder höher auf die Hand zurück.
   es: |-
@@ -48,6 +48,10 @@ sets:
     set_name: 'Speed Duel: Scars of Battle'
     rarities:
     - Common
+  - set_number: STP5-EN032
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   de:
   - set_number: ANPR-DE080
     set_name: Ancient Prophecy
@@ -55,6 +59,10 @@ sets:
     - Short Print
   - set_number: SBSC-DE045
     set_name: 'Speed Duel: Scars of Battle'
+    rarities:
+    - Common
+  - set_number: STP5-DE032
+    set_name: Speed Duel Tournament Pack 5
     rarities:
     - Common
   fr:
@@ -66,6 +74,10 @@ sets:
     set_name: 'Speed Duel: Scars of Battle'
     rarities:
     - Common
+  - set_number: STP5-FR032
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   it:
   - set_number: ANPR-IT080
     set_name: Ancient Prophecy
@@ -75,9 +87,17 @@ sets:
     set_name: 'Speed Duel: Scars of Battle'
     rarities:
     - Common
+  - set_number: STP5-IT032
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   pt:
   - set_number: SBSC-PT045
     set_name: 'Speed Duel: Scars of Battle'
+    rarities:
+    - Common
+  - set_number: STP5-PT032
+    set_name: Speed Duel Tournament Pack 5
     rarities:
     - Common
   ja:
