--- a/data/cards/32933942.yaml
+++ b/data/cards/32933942.yaml
@@ -79,6 +79,10 @@ sets:
     set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Ultra Rare
+  - set_number: STP5-EN009
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   de:
   - set_number: FOTB-DE002
     set_name: Force of the Breaker
@@ -112,6 +116,10 @@ sets:
     set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Ultra Rare
+  - set_number: STP5-DE009
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   fr:
   - set_number: FOTB-FR002
     set_name: Force of the Breaker
@@ -141,6 +149,10 @@ sets:
     set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Ultra Rare
+  - set_number: STP5-FR009
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   it:
   - set_number: FOTB-IT002
     set_name: Force of the Breaker
@@ -174,6 +186,10 @@ sets:
     set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Ultra Rare
+  - set_number: STP5-IT009
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   pt:
   - set_number: OP07-PT031
     set_name: OTS Tournament Pack 7
@@ -195,6 +211,10 @@ sets:
     set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Ultra Rare
+  - set_number: STP5-PT009
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   ja:
   - set_number: FOTB-JP002
     set_name: Force of the Breaker
