--- a/data/cards/33245030.yaml
+++ b/data/cards/33245030.yaml
@@ -79,6 +79,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: STP5-EN023
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   de:
   - set_number: DOCS-DE020
     set_name: Dimension of Chaos
@@ -113,6 +117,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: STP5-DE023
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   fr:
   - set_number: DOCS-FR020
     set_name: Dimension of Chaos
@@ -147,6 +155,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: STP5-FR023
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   it:
   - set_number: DOCS-IT020
     set_name: Dimension of Chaos
@@ -177,6 +189,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: STP5-IT023
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   pt:
   - set_number: DOCS-PT020
     set_name: Dimension of Chaos
@@ -207,6 +223,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: STP5-PT023
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   ja:
   - set_number: DOCS-JP020
     set_name: Dimension of Chaos
