--- a/data/cards/33365932.yaml
+++ b/data/cards/33365932.yaml
@@ -63,6 +63,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-EN010
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   - set_number: DT06-EN051
     set_name: Duel Terminal 6b
     rarities:
@@ -85,6 +89,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-DE010
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   fr:
   - set_number: FOTB-FR009
     set_name: Force of the Breaker
@@ -103,6 +111,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-FR010
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   it:
   - set_number: FOTB-IT009
     set_name: Force of the Breaker
@@ -121,6 +133,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-IT010
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   pt:
   - set_number: SDSB-PT021
     set_name: 'Structure Deck: Soulburner'
@@ -130,6 +146,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-PT010
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   ja:
   - set_number: FOTB-JP009
     set_name: Force of the Breaker
