--- a/data/cards/39996157.yaml
+++ b/data/cards/39996157.yaml
@@ -62,6 +62,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-EN014
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   de:
   - set_number: DRL3-DE015
     set_name: 'Dragons of Legend: Unleashed'
@@ -83,6 +87,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-DE014
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   fr:
   - set_number: DRL3-FR015
     set_name: 'Dragons of Legend: Unleashed'
@@ -104,6 +112,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-FR014
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   it:
   - set_number: DRL3-IT015
     set_name: 'Dragons of Legend: Unleashed'
@@ -125,6 +137,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-IT014
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   pt:
   - set_number: DRL3-PT015
     set_name: 'Dragons of Legend: Unleashed'
@@ -146,6 +162,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-PT014
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   ja:
   - set_number: CPF1-JP015
     set_name: 'Collectors Pack: Duelist of Flash Version'
