--- a/data/cards/45141013.yaml
+++ b/data/cards/45141013.yaml
@@ -52,6 +52,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Ultimate Predators'
     rarities:
     - Common
+  - set_number: STP5-EN028
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   de:
   - set_number: STBL-DE061
     set_name: Starstrike Blast
@@ -59,6 +63,10 @@ sets:
     - Rare
   - set_number: SS03-DEA23
     set_name: 'Speed Duel Starter Decks: Ultimate Predators'
+    rarities:
+    - Common
+  - set_number: STP5-DE028
+    set_name: Speed Duel Tournament Pack 5
     rarities:
     - Common
   fr:
@@ -70,6 +78,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Ultimate Predators'
     rarities:
     - Common
+  - set_number: STP5-FR028
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   it:
   - set_number: STBL-IT061
     set_name: Starstrike Blast
@@ -79,9 +91,17 @@ sets:
     set_name: 'Speed Duel Starter Decks: Ultimate Predators'
     rarities:
     - Common
+  - set_number: STP5-IT028
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   pt:
   - set_number: SS03-PTA23
     set_name: 'Speed Duel Starter Decks: Ultimate Predators'
+    rarities:
+    - Common
+  - set_number: STP5-PT028
+    set_name: Speed Duel Tournament Pack 5
     rarities:
     - Common
   ja:
