--- a/data/cards/47766694.yaml
+++ b/data/cards/47766694.yaml
@@ -56,6 +56,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
     rarities:
     - Common
+  - set_number: STP5-EN033
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   de:
   - set_number: 5DS3-DE029
     set_name: 'Starter Deck: Duelist Toolbox'
@@ -71,6 +75,10 @@ sets:
     - Common
   - set_number: SS02-DEC18
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
+    rarities:
+    - Common
+  - set_number: STP5-DE033
+    set_name: Speed Duel Tournament Pack 5
     rarities:
     - Common
   fr:
@@ -90,6 +98,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
     rarities:
     - Common
+  - set_number: STP5-FR033
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   it:
   - set_number: 5DS3-IT029
     set_name: 'Starter Deck: Duelist Toolbox'
@@ -107,6 +119,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
     rarities:
     - Common
+  - set_number: STP5-IT033
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   pt:
   - set_number: SDPL-PT032
     set_name: 'Structure Deck: Powercode Link'
@@ -118,6 +134,10 @@ sets:
     - Common
   - set_number: SS02-PTC18
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
+    rarities:
+    - Common
+  - set_number: STP5-PT033
+    set_name: Speed Duel Tournament Pack 5
     rarities:
     - Common
   ja:
