--- a/data/cards/53493204.yaml
+++ b/data/cards/53493204.yaml
@@ -64,6 +64,10 @@ sets:
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
+  - set_number: STP5-EN006
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   - set_number: TP1-013
     set_name: 'Tournament Pack: 1st Season'
     rarities:
@@ -97,6 +101,10 @@ sets:
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
+  - set_number: STP5-DE006
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   fr:
   - set_number: TP1-F013
     set_name: 'Tournament Pack: 1st Season'
@@ -122,6 +130,10 @@ sets:
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
+  - set_number: STP5-FR006
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   it:
   - set_number: TP1-I013
     set_name: 'Tournament Pack: 1st Season'
@@ -147,6 +159,10 @@ sets:
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
+  - set_number: STP5-IT006
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   pt:
   - set_number: SGX1-PTA05
     set_name: 'Speed Duel GX: Duel Academy Box'
@@ -156,6 +172,10 @@ sets:
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
+  - set_number: STP5-PT006
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   ja:
   - set_number: ''
     set_name: Booster 6
