--- a/data/cards/58169731.yaml
+++ b/data/cards/58169731.yaml
@@ -61,6 +61,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-EN005
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Ultra Rare
   - set_number: SGX3-ENH20
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
@@ -87,6 +91,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-DE005
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Ultra Rare
   - set_number: SGX3-DEH20
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
@@ -113,6 +121,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-FR005
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Ultra Rare
   - set_number: SGX3-FRH20
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
@@ -139,6 +151,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-IT005
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Ultra Rare
   - set_number: SGX3-ITH20
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
@@ -165,6 +181,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-PT005
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Ultra Rare
   - set_number: SGX3-PTH20
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
