--- a/data/cards/60493189.yaml
+++ b/data/cards/60493189.yaml
@@ -73,6 +73,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-EN003
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Ultra Rare
   de:
   - set_number: GLAS-DE037
     set_name: Gladiator's Assault
@@ -90,6 +94,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-DE003
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: GLAS-FR037
     set_name: Gladiator's Assault
@@ -103,6 +111,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-FR003
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Ultra Rare
   it:
   - set_number: GLAS-IT037
     set_name: Gladiator's Assault
@@ -120,11 +132,19 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-IT003
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: SGX1-PTA26
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-PT003
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: GLAS-JP037
     set_name: Gladiator's Assault
