--- a/data/cards/61405855.yaml
+++ b/data/cards/61405855.yaml
@@ -48,6 +48,10 @@ sets:
     set_name: 'Speed Duel: Arena of Lost Souls'
     rarities:
     - Super Rare
+  - set_number: STP5-EN024
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   de:
   - set_number: PCJ-DE003
     set_name: 'Yu-Gi-Oh! Power of Chaos: Joey the Passion promotional cards'
@@ -57,6 +61,10 @@ sets:
     set_name: 'Speed Duel: Arena of Lost Souls'
     rarities:
     - Super Rare
+  - set_number: STP5-DE024
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   fr:
   - set_number: PCJ-FR003
     set_name: 'Yu-Gi-Oh! Power of Chaos: Joey the Passion promotional cards'
@@ -66,6 +74,10 @@ sets:
     set_name: 'Speed Duel: Arena of Lost Souls'
     rarities:
     - Super Rare
+  - set_number: STP5-FR024
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   it:
   - set_number: PCJ-IT003
     set_name: 'Yu-Gi-Oh! Power of Chaos: Joey the Passion promotional cards'
@@ -75,11 +87,19 @@ sets:
     set_name: 'Speed Duel: Arena of Lost Souls'
     rarities:
     - Super Rare
+  - set_number: STP5-IT024
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   pt:
   - set_number: SBLS-PT015
     set_name: 'Speed Duel: Arena of Lost Souls'
     rarities:
     - Super Rare
+  - set_number: STP5-PT024
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   ja:
   - set_number: G4-09
     set_name: 'Yu-Gi-Oh! Duel Monsters 4: Battle of Great Duelist: Jonouchi Deck promotional cards'
