--- a/data/cards/64627453.yaml
+++ b/data/cards/64627453.yaml
@@ -58,6 +58,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-EN012
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   de:
   - set_number: RGBT-DE097
     set_name: Raging Battle
@@ -71,6 +75,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-DE012
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   fr:
   - set_number: RGBT-FR097
     set_name: Raging Battle
@@ -84,6 +92,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-FR012
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   it:
   - set_number: RGBT-IT097
     set_name: Raging Battle
@@ -97,6 +109,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-IT012
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   pt:
   - set_number: OP06-PT022
     set_name: OTS Tournament Pack 6
@@ -106,6 +122,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP5-PT012
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Super Rare
   ja:
   - set_number: JF09-JP009
     set_name: Jump Festa 2009 - Promotion Pack
