--- a/data/cards/90928333.yaml
+++ b/data/cards/90928333.yaml
@@ -68,6 +68,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Ultimate Predators'
     rarities:
     - Common
+  - set_number: STP5-EN026
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   de:
   - set_number: SOD-DE037
     set_name: Soul of the Duelist
@@ -95,6 +99,10 @@ sets:
     - Common
   - set_number: SS03-DEB22
     set_name: 'Speed Duel Starter Decks: Ultimate Predators'
+    rarities:
+    - Common
+  - set_number: STP5-DE026
+    set_name: Speed Duel Tournament Pack 5
     rarities:
     - Common
   fr:
@@ -126,6 +134,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Ultimate Predators'
     rarities:
     - Common
+  - set_number: STP5-FR026
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   it:
   - set_number: SOD-IT037
     set_name: Soul of the Duelist
@@ -155,6 +167,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Ultimate Predators'
     rarities:
     - Common
+  - set_number: STP5-IT026
+    set_name: Speed Duel Tournament Pack 5
+    rarities:
+    - Common
   pt:
   - set_number: SOD-PT037
     set_name: Soul of the Duelist
@@ -170,6 +186,10 @@ sets:
     - Common
   - set_number: SS03-PTB22
     set_name: 'Speed Duel Starter Decks: Ultimate Predators'
+    rarities:
+    - Common
+  - set_number: STP5-PT026
+    set_name: Speed Duel Tournament Pack 5
     rarities:
     - Common
   ja:
