--- a/data/cards/08794055.yaml
+++ b/data/cards/08794055.yaml
@@ -7,8 +7,8 @@ name:
   fr: Les Plus Lointaines Profondes Limites
   it: Il Più Distante, Più Profondo Fondale
   pt: As Profundezas Mais Distantes e Mais Profundas
-  ja:
-  ja_romaji:
+  ja: <ruby>最<rt>さい</rt></ruby><ruby>果<rt>は</rt></ruby>ての<ruby>宇<rt>う</rt></ruby><ruby>宙<rt>ちゅう</rt></ruby>
+  ja_romaji: Saihate no Uchū
   ko:
   ko_rr:
   zh-TW:
