--- a/data/cards/10632284.yaml
+++ b/data/cards/10632284.yaml
@@ -7,8 +7,8 @@ name:
   fr: Éléphant Mimèsis
   it: Elefante Mimesi
   pt: Elefante Mimese
-  ja:
-  ja_romaji:
+  ja: ミメシスエレファント
+  ja_romaji: Mimeshisu Erefanto
   ko:
   ko_rr:
   zh-TW:
