--- a/data/cards/11765832.yaml
+++ b/data/cards/11765832.yaml
@@ -7,8 +7,8 @@ name:
   fr: Garura, Ailes de la Vie Retentissante
   it: Garura, Ali della Vita Risonante
   pt: Garura, Asas da Vida Ressonante
-  ja:
-  ja_romaji:
+  ja: <ruby>共<rt>きょう</rt></ruby><ruby>命<rt>めい</rt></ruby>の<ruby>翼<rt>つばさ</rt></ruby>ガルーラ
+  ja_romaji: Kyōmei no Tsubasa Garūra
   ko:
   ko_rr:
   zh-TW:
