--- a/data/cards/23812568.yaml
+++ b/data/cards/23812568.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If a Level 7 monster(s) is Special Summoned to your field: Send 2 "Additional Mirror Level 7" from your hand and/or Deck to the GY, then target 1 of those monsters; you can only Special Summon from the Extra Deck once for the rest of this turn after this card resolves, also Special Summon 2 monsters with that name from your Deck, then take damage equal to the total original ATK of the monsters Special Summoned by this effect.
+    If a Level 7 monster(s) is Special Summoned to your field: Send 2 "Additional Mirror Level 7" from your hand and/or Deck to the GY, then target 1 of those monsters; Special Summon 2 monsters with the same name as that target from your Deck, then take damage equal to their combined original ATK, also, for the rest of this turn after this card resolves, you can only Special Summon from the Extra Deck once.
   de:
   es:
   fr:
