--- a/data/cards/34456146.yaml
+++ b/data/cards/34456146.yaml
@@ -1,7 +1,7 @@
 konami_id: 18449
 password: 34456146
 name:
-  en: Love Magus - Ciela
+  en: Sage of Benevolence - Ciela
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     (This card is always treated as a "Sky Striker" card.)
-    You can discard 1 Spell; Special Summon this card from your hand. You can banish 1 Spell from your GY; give control of this card to your opponent, and if you do, Special Summon 1 "Sky Striker Ace" monster from your GY. If this card is destroyed by battle or card effect and sent to the GY: You can target 1 of your banished "Sky Striker" Spells; add it to your hand. You can only use each effect of "Love Magus - Ciela" once per turn.
+    You can discard 1 Spell; Special Summon this card from your hand. You can banish 1 Spell from your GY; give control of this card to your opponent, and if you do, Special Summon 1 "Sky Striker Ace" monster from your GY. If this card is destroyed by battle or card effect and sent to the GY: You can target 1 of your banished "Sky Striker" Spells; add it to your hand. You can only use each effect of "Sage of Benevolence - Ciela" once per turn.
   de:
   es:
   fr:
@@ -37,7 +37,7 @@ series:
 - Sky Striker
 images:
 - index: 1
-  image: LoveMagusCiela-YOS1-JP-UR.png
+  image: SageofBenevolenceCiela-YOS1-JP-UR.png
 sets:
   ja:
   - set_number: YOS1-JP001
