--- a/data/cards/35756798.yaml
+++ b/data/cards/35756798.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    During your turn, if a Synchro Monster(s) was sent to your GY this turn: Target 1 Synchro Monster you control; it gains the ability this turn to make a second attack during each Battle Phase, then, if you activated this card by targeting a Synchro Monster with "Warrior", "Synchron", and/or "Stardust" in its original name, you can make it gain ATK equal to the ATK of 1 Synchro Monster in your GY. You can only activate 1 "Final Cross" per turn.
+    During your turn, if a Synchro Monster(s) was sent to your GY this turn: Target 1 Synchro Monster you control; it can make a second attack during each Battle Phase this turn, also, if you activated this card by targeting a Synchro Monster with "Warrior", "Synchron", or "Stardust" in its original name, you can make it gain ATK equal to the ATK of 1 Synchro Monster in your GY. You can only activate 1 "Final Cross" per turn.
   de:
   es:
   fr:
