--- a/data/cards/39973386.yaml
+++ b/data/cards/39973386.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Tribute 1 LIGHT or DARK monster; Special Summon 1 LIGHT or DARK monster with the same original Type and Level, but different original Attribute, from your hand or Extra Deck. During your Main Phase: You can banish this card from your GY, then target 1 LIGHT and 1 DARK monster in your GY; shuffle both into the Deck, then draw 1 card. You can only use each effect of "Duality" once per turn.
+    Tribute 1 LIGHT or DARK monster; Special Summon 1 LIGHT or DARK monster from your hand or Extra Deck with the same original Type and Level, but a different original Attribute. During your Main Phase: You can banish this card from your GY, then target 1 LIGHT and 1 DARK monster in your GY; shuffle both into the Deck, then draw 1 card. You can only use each effect of "Duality" once per turn.
   de:
   es:
   fr:
