--- a/data/cards/46815301.yaml
+++ b/data/cards/46815301.yaml
@@ -7,8 +7,8 @@ name:
   fr: Askaan, le Ghoti à Deux Cornes
   it: Askaan, il Ghoti Bicornuto
   pt: Askaan, o Ghoti de Dois Chifres
-  ja:
-  ja_romaji:
+  ja: ゴーティスの<ruby>双<rt>そう</rt></ruby><ruby>角<rt>かく</rt></ruby>アスカーン
+  ja_romaji: Gōtisu no Sōkaku Asukān
   ko:
   ko_rr:
   zh-TW:
