--- a/data/cards/60306277.yaml
+++ b/data/cards/60306277.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Neither player can declare an attack with non-Synchro Monsters. You can only use each of the following effects of "Synchro Zone" once per turn. If a non-Tuner Synchro Monster(s) is sent to your GY (except during the Damage Step): You can target 1 of them; Special Summon it, and if you do, it is treated as a Tuner. During your opponent's Main Phase: You can send this face-up card from your Spell & Trap Zone to the GY; immediately after this effect resolves, Synchro Summon 1 Synchro Monster using monsters you control as material.
+    Neither player can declare attacks, except with Synchro Monsters. You can only use each of the following effects of "Synchro Zone" once per turn. If a non-Tuner Synchro Monster(s) is sent to your GY (except during the Damage Step): You can target 1 of those monsters; Special Summon it, and if you do, it is treated as a Tuner. During your opponent's Main Phase: You can send this face-up card to the GY; immediately after this effect resolves, Synchro Summon using monsters you control as material.
   de:
   es:
   fr:
