--- a/data/cards/69133798.yaml
+++ b/data/cards/69133798.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 大太郎法师
 text:
   en: |-
-    Cannot be Special Summoned. You can Tribute Summon this card face-up by Tributing 1 Zombie monster. Gains 200 ATK for every other Zombie monster you control. At the start of your Main Phase 1, if this card, and 2 or more Zombie monsters other than "Daidara-Bocchi", are in your GY: You can discard 1 card; add this card to your hand.
+    Cannot be Special Summoned. You can Tribute Summon this card face-up by Tributing 1 Zombie monster. Gains 200 ATK for each Zombie monster you control, except this card. At the start of your Main Phase 1, if you have this card, and 2 or more Zombie monsters other than "Daidara-Bocchi", in your GY: You can discard 1 card; add this card to your hand.
   de:
   es:
   fr:
