--- a/data/cards/73421698.yaml
+++ b/data/cards/73421698.yaml
@@ -7,8 +7,8 @@ name:
   fr: Shif, Fée du Ghoti
   it: Shif, Fata dei Ghoti
   pt: Shif, a Fada dos Ghoti
-  ja:
-  ja_romaji:
+  ja: ゴーティスの<ruby>妖<rt>よう</rt></ruby><ruby>精<rt>せい</rt></ruby>シフ
+  ja_romaji: Gōtisu no Yōsei Shifu
   ko:
   ko_rr:
   zh-TW:
