--- a/data/cards/77189532.yaml
+++ b/data/cards/77189532.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If this card is used for the Link Summon of a "Borrel" monster, it is treated as a Dragon monster. You can only use each of the following effects of "Rokket Coder" once per turn. If a Cyberse monster you control would be used as Link Material for a "Code Talker" monster, this card in your hand can also be used as material. If this card you control would be used as Link Material for a "Borrel" monster, you can also use 1 DARK monster in your hand as material.
+    If this card would be used for the Link Summon of a "Borrel" monster, you can treat this card as a Dragon. You can only use each of the following effects of "Rokket Coder" once per turn. If a Cyberse monster you control would be used as Link Material for a "Code Talker" monster, this card in your hand can also be used as material. If this card you control would be used as Link Material for a "Borrel" monster, 1 DARK monster in your hand can also be used as material.
   de:
   es:
   fr:
