--- a/data/cards/78077209.yaml
+++ b/data/cards/78077209.yaml
@@ -1,7 +1,7 @@
 konami_id: 18029
 password: 78077209
 name:
-  en: Diabolica, Dragon Fiend Commander
+  en: Diabolica the Draconique General
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 魔龙将 迪亚波利卡
 text:
   en: |-
-    If a Fiend monster(s) other than "Diabolica, Dragon Fiend Commander" is sent to your GY by card effect (except during the Damage Step): You can Special Summon this card from your GY (if it was there when the monster was sent) or hand (even if not), but banish it when it leaves the field. If this card is sent to the GY by card effect: You can target 1 Fiend monster in your GY, except "Diabolica, Dragon Fiend Commander"; add it to your hand. You can only use 1 "Diabolica, Dragon Fiend Commander" effect per turn, and only once that turn.
+    If a Fiend monster(s), except "Diabolica the Draconique General", is sent to your GY by card effect (except during the Damage Step): You can Special Summon this card from your GY (if it was there when the monster was sent) or hand (even if not), but banish it when it leaves the field. If this card is sent to the GY by card effect: You can target 1 Fiend monster in your GY, except "Diabolica the Draconique General"; add it to your hand. You can only use 1 "Diabolica the Draconique General" effect per turn, and only once that turn.
   de:
   es:
   fr:
@@ -37,7 +37,7 @@ atk: 2300
 def: 0
 images:
 - index: 1
-  image: DiabolicaDragonFiendCommander-VJMP-JP-UR.png
+  image: DiabolicatheDraconiqueGeneral-VJMP-JP-UR.png
 sets:
   ja:
   - set_number: VJMP-JP221
