--- a/data/cards/91479482.yaml
+++ b/data/cards/91479482.yaml
@@ -1,7 +1,7 @@
 konami_id: 18228
 password: 91479482
 name:
-  en: Brave Beauty of Ruby Regard - Bradamante
+  en: Courageous Crimson Chevalier Bradamante
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     (This card is always treated as an "Infernoble Knight" card.)
-    You can discard this card, then target 1 Warrior monster you control; equip it with 1 appropriate Equip Spell from your Deck. When this card that is not equipped with any Equip Card is destroyed by battle with an opponent's monster and sent to the GY: You can Special Summon this card, and if you do, equip that monster your opponent controls to this card. You can only use each effect of "Brave Beauty of Ruby Regard - Bradamante" once per turn.
+    You can discard this card, then target 1 Warrior monster you control; equip it with 1 Equip Spell from your Deck that can equip to it. When this card, not equipped with an Equip Card, is destroyed by battle with an opponent's monster and sent to the GY: You can Special Summon this card, and if you do, equip that monster your opponent controls to this card. You can only use each effect of "Courageous Crimson Chevalier Bradamante" once per turn.
   de:
   es:
   fr:
@@ -38,7 +38,7 @@ series:
 - Noble Knight
 images:
 - index: 1
-  image: BraveBeautyofRubyRegardBradamante-YO06-JP-UR.png
+  image: CourageousCrimsonChevalierBradamante-YO06-JP-UR.png
 sets:
   ja:
   - set_number: YO06-JP001
