--- a/data/cards/96795312.yaml
+++ b/data/cards/96795312.yaml
@@ -1,7 +1,7 @@
 konami_id: 18443
 password: 96795312
 name:
-  en: War Magus - Aakas
+  en: Sage of Strength - Akash
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     (This card is always treated as a "Sky Striker" card.)
-    You can discard 1 Spell; Special Summon this card from your hand. If a Link Monster(s) you control would be destroyed by battle or card effect, you can banish 1 Spell from your GY instead. If this card is destroyed by battle or card effect and sent to the GY: You can target 1 of your banished "Sky Striker" Spells; add it to your hand. You can only use each effect of "War Magus - Aakas" once per turn.
+    You can discard 1 Spell; Special Summon this card from your hand. If a Link Monster(s) you control would be destroyed by battle or card effect, you can banish 1 Spell from your GY instead. If this card is destroyed by battle or card effect and sent to the GY: You can target 1 of your banished "Sky Striker" Spells; add it to your hand. You can only use each effect of "Sage of Strength - Akash" once per turn.
   de:
   es:
   fr:
@@ -37,7 +37,7 @@ series:
 - Sky Striker
 images:
 - index: 1
-  image: WarMagusAakas-23PP-JP-C.png
+  image: SageofStrengthAkash-23PP-JP-C.png
 sets:
   ja:
   - set_number: 23PP-JP018
