--- a/data/cards/97639441.yaml
+++ b/data/cards/97639441.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    When an opponent's monster declares an attack: You can activate this effect; skip your next Battle Phase, also Special Summon this card from your hand, then end the Battle Phase. If this card is sent to the GY: You can add 1 "Photon" or "Galaxy" Spell/Trap from your Deck to your hand. You can only use each effect of "Photon Jumper" once per turn.
+    When an opponent's monster declares an attack: You can activate this effect; skip your next Battle Phase, also Special Summon this card from your hand, then end this Battle Phase. If this card is sent to the GY: You can add 1 "Photon" or "Galaxy" Spell/Trap from your Deck to your hand. You can only use each effect of "Photon Jumper" once per turn.
   de:
   es:
   fr:
