--- a/data/cards/03574681.yaml
+++ b/data/cards/03574681.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     (This card is always treated as a "Crystal" card.)
-    Place 2 "Crystal Beast" monsters from your Deck face-up in your Spell & Trap Zone as Continuous Spells, then Special Summon 1 "Crystal Beast" monster from your hand or GY with a different name from those cards, and if you do, equip it with this card. When this card leaves the field, destroy that monster. You can only activate 1 "Golden Rule" per turn.
+    Place 2 "Crystal Beast" monsters from your Deck face-up in your Spell & Trap Zone as Continuous Spells, then Special Summon 1 "Crystal Beast" monster from your hand or GY with a different name than those cards, and if you do, equip it with this card. When this card leaves the field, destroy that monster. You can only activate 1 "Golden Rule" per turn.
   de:
   es:
   fr:
