--- a/data/cards/04606229.yaml
+++ b/data/cards/04606229.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     (This card is always treated as a "Galaxy-Eyes" card.)
-    Pay half your LP, then target 2 monsters in your GY; for the rest of this turn after this card resolves, you can only Special Summon monsters from the Extra Deck once, not counting this card's effect, also Special Summon both targeted monsters (but their effects are negated), then, immediately after this effect resolves, Xyz Summon 1 "Number" monster using only those 2 monsters. You can only activate 1 "Numbers Last Hope" per turn.
+    Pay half your LP, then target 2 monsters in your GY; Special Summon both, but negate their effects, then, immediately after this effect resolves, Xyz Summon 1 "Number" Xyz Monster using only those 2 monsters, also for the rest of this turn after this card resolves, you can only Special Summon one more time from the Extra Deck. You can only activate 1 "Numbers Last Hope" per turn.
   de:
   es:
   fr:
