--- a/data/cards/05829717.yaml
+++ b/data/cards/05829717.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     "Dark Magician" + 1 Level 7 or higher Dragon or Warrior monster
-    If your monster attacks a Defense Position monster, inflict piercing battle damage to your opponent. Once per turn, when your monster destroys an opponent's monster by battle: You can inflict damage to your opponent equal to the destroyed monster's original ATK. If this card is destroyed: You can Special Summon 1 "Dark Magician" and 1 "Gaia the Dragon Champion" from your hand, Deck, Extra Deck, and/or GY.
+    If your monster attacks a Defense Position monster, inflict piercing battle damage to your opponent. Once per turn, when your monster destroys an opponent's monster by battle: You can inflict damage to your opponent equal to the destroyed monster's original ATK. If this card is destroyed: You can Special Summon both 1 "Dark Magician" and 1 "Gaia the Dragon Champion" from your hand, Deck, Extra Deck, and/or GY.
   de:
   es:
   fr:
