--- a/data/cards/22790910.yaml
+++ b/data/cards/22790910.yaml
@@ -1,7 +1,7 @@
 konami_id: 18444
 password: 22790910
 name:
-  en: Wisdom Magus - Himmel
+  en: Sage of Wisdom - Himmel
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     (This card is always treated as a "Sky Striker" card.)
-    You can discard 1 Spell; Special Summon this card from your hand. When your opponent activates a card or effect that targets a Link Monster(s) you control (Quick Effect): You can banish 2 Spells from your GY; negate that effect. If this card is destroyed by battle or card effect and sent to the GY: You can target 1 of your banished "Sky Striker" Spells; add it to your hand. You can only use each effect of "Wisdom Magus - Himmel" once per turn.
+    You can discard 1 Spell; Special Summon this card from your hand. When your opponent activates a card or effect that targets a Link Monster(s) you control (Quick Effect): You can banish 2 Spells from your GY; negate that effect. If this card is destroyed by battle or card effect and sent to the GY: You can target 1 of your banished "Sky Striker" Spells; add it to your hand. You can only use each effect of "Sage of Wisdom - Himmel" once per turn.
   de:
   es:
   fr:
@@ -37,7 +37,7 @@ series:
 - Sky Striker
 images:
 - index: 1
-  image: WisdomMagusHimmel-23PP-JP-C.png
+  image: SageofWisdomHimmel-23PP-JP-C.png
 sets:
   ja:
   - set_number: 23PP-JP019
