--- a/data/cards/30095833.yaml
+++ b/data/cards/30095833.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Level 7 Pendulum Monsters
-    If you can Pendulum Summon Level 7, you can Pendulum Summon this face-up card in your Extra Deck. Cannot be used as material for an Xyz Summon the turn it is Xyz Summoned. You can detach 1 material from this card, then target up to 2 monsters your opponent controls with 3000 or less ATK; destroy them. You can only use this effect of "Odd-Eyes Rebellion Xyz Dragon" once per turn. If this card in the Monster Zone is destroyed: You can place this card in your Pendulum Zone.
+    If you can Pendulum Summon Level 7, you can Pendulum Summon this face-up card from your Extra Deck. This card cannot be used as material for an Xyz Summon the turn it was Xyz Summoned. You can detach 1 material from this card, then target up to 2 monsters your opponent controls with 3000 or less ATK; destroy them. You can only use this effect of "Odd-Eyes Rebellion Xyz Dragon" once per turn. If this card in the Monster Zone is destroyed: You can place this card in your Pendulum Zone.
   de:
   es:
   fr:
