--- a/data/cards/31817415.yaml
+++ b/data/cards/31817415.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     "Elemental HERO Neos" + 1 "Armed Dragon" monster
-    Must be Fusion Summoned. If this card is Special Summoned: You can choose 1 Dragon monster in your GY and destroy all monsters your opponent controls with an equal or lower Level. When this card destroys a monster by battle: You can make this card gain this effect.
+    Must be Fusion Summoned. If this card is Special Summoned: You can choose 1 Dragon monster in your GY and destroy all monsters your opponent controls with an equal or lower Level than it. When this card destroys a monster by battle: You can make this card gain the following effect.
     ● During the Main Phase (Quick Effect): You can Tribute this card; Special Summon 1 "Elemental HERO" Fusion Monster from your Extra Deck, ignoring its Summoning conditions.
   de:
   es:
