--- a/data/cards/32549749.yaml
+++ b/data/cards/32549749.yaml
@@ -15,9 +15,9 @@ name:
   zh-CN:
 text:
   en: |-
-    Activate 1 of these effects.
+    Activate 1 of the following effects.
     ● Target 1 face-up monster you control; it gains 800 ATK until the end of this turn.
-    ● Target 1 Equip Spell in either GY; either Set it to your field or equip it to 1 appropriate monster you control.
+    ● Target 1 Equip Spell in either GY; Set it to your field, or equip it to 1 appropriate monster you control.
     You can only activate 1 "Arms Regeneration" per turn.
   de:
   es:
