--- a/data/cards/34034150.yaml
+++ b/data/cards/34034150.yaml
@@ -1,7 +1,7 @@
 konami_id: 18438
 password: 34034150
 name:
-  en: Fissioning Mother Spider
+  en: Mother Spider Splitter
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If you control no monsters, you can Special Summon this card (from your hand). You can Tribute this card; you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except Xyz Monsters, also Special Summon up to 3 "Baby Spider" from your hand and/or Deck, and if you do, their Levels become 5, also they cannot be used as material for an Xyz Summon, except the Xyz Summon of a DARK monster. You can only use this effect of "Fissioning Mother Spider" once per turn.
+    If you control no monsters, you can Special Summon this card (from your hand). You can Tribute this card; you cannot Special Summon from the Extra Deck for the rest of this turn, except Xyz Monsters, also Special Summon up to 3 "Baby Spider" from your hand and/or Deck, and if you do, they become Level 5, but cannot be used as material for an Xyz Summon, except the Xyz Summon of a DARK monster. You can only use this effect of "Mother Spider Splitter" once per turn.
   de:
   es:
   fr:
@@ -36,7 +36,7 @@ series:
 - Spider
 images:
 - index: 1
-  image: FissioningMotherSpider-23PP-JP-C.png
+  image: MotherSpiderSplitter-23PP-JP-C.png
 sets:
   ja:
   - set_number: 23PP-JP013
