--- a/data/cards/73244186.yaml
+++ b/data/cards/73244186.yaml
@@ -7,8 +7,8 @@ name:
   fr: Murène d'Avarice
   it: Murena dell'Avarizia
   pt: Moreia da Avareza
-  ja:
-  ja_romaji:
+  ja: <ruby>貪<rt>どん</rt></ruby><ruby>欲<rt>よく</rt></ruby>なウツボ
+  ja_romaji: Donyoku na Utsubo
   ko:
   ko_rr:
   zh-TW:
