--- a/data/cards/84366728.yaml
+++ b/data/cards/84366728.yaml
@@ -7,8 +7,8 @@ name:
   fr: Avant-Garde de l'Empereur Souterrain
   it: Avanguardia dell'Imperatore del Sottosuolo
   pt: Vanguarda do Imperador Subterrâneo
-  ja:
-  ja_romaji:
+  ja: <ruby>地<rt>ち</rt></ruby><ruby>底<rt>てい</rt></ruby><ruby>王<rt>おう</rt></ruby>の<ruby>尖<rt>せん</rt></ruby><ruby>兵<rt>ぺい</rt></ruby>
+  ja_romaji: Chiteiō no Senpei
   ko:
   ko_rr:
   zh-TW:
