--- a/data/cards/02405631.yaml
+++ b/data/cards/02405631.yaml
@@ -7,8 +7,8 @@ name:
   fr: Guoglim, Lance du Ghoti
   it: Guoglim, Lancia dei Ghoti
   pt: Guoglim, a Lança dos Ghoti
-  ja:
-  ja_romaji:
+  ja: ゴーティスの<ruby>死<rt>し</rt></ruby><ruby>棘<rt>きょく</rt></ruby>グオグリム
+  ja_romaji: Gōtisu no Shikyoku Guogurimu
   ko:
   ko_rr:
   zh-TW:
