--- a/data/cards/03259760.yaml
+++ b/data/cards/03259760.yaml
@@ -7,8 +7,8 @@ name:
   fr: Envoûtement
   it: Affascinato
   pt: Enfeitiçado
-  ja:
-  ja_romaji:
+  ja: <ruby>呪<rt>じゅ</rt></ruby><ruby>縛<rt>ばく</rt></ruby><ruby>衆<rt>しゅう</rt></ruby>
+  ja_romaji: Jubakushū
   ko:
   ko_rr:
   zh-TW:
