--- a/data/cards/24634594.yaml
+++ b/data/cards/24634594.yaml
@@ -7,8 +7,8 @@ name:
   fr: Diabolantis la Mante Menaçante
   it: Diabolantis la Mantide Minacciosa
   pt: Diabolantis, o Louva-a-deus Ameaçador
-  ja:
-  ja_romaji:
+  ja: <ruby>魔<rt>ま</rt></ruby><ruby>螂<rt>ろう</rt></ruby>ディアボランティス
+  ja_romaji: Marō Diaborantisu
   ko:
   ko_rr:
   zh-TW:
