--- a/data/cards/45792753.yaml
+++ b/data/cards/45792753.yaml
@@ -7,8 +7,8 @@ name:
   fr: Chaîne Ghoti
   it: Catena Ghoti
   pt: Corrente Ghoti
-  ja:
-  ja_romaji:
+  ja: ゴーティス・チェイン
+  ja_romaji: Gōtisu Chein
   ko:
   ko_rr:
   zh-TW:
