--- a/data/cards/61845881.yaml
+++ b/data/cards/61845881.yaml
@@ -7,8 +7,8 @@ name:
   fr: Minairuka
   it: Minairuka
   pt: Minairuka
-  ja:
-  ja_romaji:
+  ja: ミナイルカ
+  ja_romaji: Minairuka
   ko:
   ko_rr:
   zh-TW:
