--- a/data/cards/65898344.yaml
+++ b/data/cards/65898344.yaml
@@ -7,8 +7,8 @@ name:
   fr: Fureur Ghoti
   it: Furia Ghoti
   pt: Fúria Ghoti
-  ja:
-  ja_romaji:
+  ja: ゴーティス・フューリー
+  ja_romaji: Gōtisu Fyūrī
   ko:
   ko_rr:
   zh-TW:
