--- a/data/cards/76133574.yaml
+++ b/data/cards/76133574.yaml
@@ -7,8 +7,8 @@ name:
   fr: Zep, Rubis du Ghoti
   it: Zep, Rubino dei Ghoti
   pt: Zep, o Rubi dos Ghoti
-  ja:
-  ja_romaji:
+  ja: ゴーティスの<ruby>紅<rt>こう</rt></ruby><ruby>玉<rt>ぎょく</rt></ruby>ゼップ
+  ja_romaji: Gōtisu no Kōgyoku Zeppu
   ko:
   ko_rr:
   zh-TW:
