--- a/data/cards/89997728.yaml
+++ b/data/cards/89997728.yaml
@@ -210,6 +210,10 @@ sets:
     rarities:
     - Ultra Rare
   pt:
+  - set_number: TP6-PT002
+    set_name: Tournament Pack 6
+    rarities:
+    - Super Rare
   - set_number: DPBC-PT047
     set_name: 'Duelist Pack: Battle City'
     rarities:
