--- a/data/cards/97240499.yaml
+++ b/data/cards/97240499.yaml
@@ -7,8 +7,8 @@ name:
   fr: Taurorphée l'Harmonieux Barde Matador
   it: Orfetoro l'Armonioso Bardo Torero
   pt: Tourorfeu, o Harmonioso Bardo Toureiro
-  ja:
-  ja_romaji:
+  ja: <ruby>渾<rt>こん</rt></ruby><ruby>然<rt>ぜん</rt></ruby>たる<ruby>闘<rt>とう</rt></ruby><ruby>牛<rt>ぎゅう</rt></ruby><ruby>詩<rt>し</rt></ruby>－オルフェブル
+  ja_romaji: Konzentaru Tōgyūshi - Orufeburu
   ko:
   ko_rr:
   zh-TW:
