--- a/data/cards/30748475.yaml
+++ b/data/cards/30748475.yaml
@@ -7,8 +7,8 @@ name:
   fr: Canon Daruma Karma Destructeur
   it: Cannone Daruma Karma Distruttivo
   pt: Canhão Destrutivo Daruma Carma
-  ja:
-  ja_romaji:
+  ja: <ruby>魔<rt>ま</rt></ruby><ruby>砲<rt>ほう</rt></ruby><ruby>戦<rt>せん</rt></ruby><ruby>機<rt>き</rt></ruby>ダルマ・カルマ
+  ja_romaji: Mahō Senki Daruma Karuma
   ko:
   ko_rr:
   zh-TW:
