--- a/data/cards/38409239.yaml
+++ b/data/cards/38409239.yaml
@@ -7,8 +7,8 @@ name:
   fr: Cosmos Ghoti
   it: Cosmo Ghoti
   pt: Cosmo Ghoti
-  ja:
-  ja_romaji:
+  ja: ゴーティス・コスモス
+  ja_romaji: Gōtisu Kosumosu
   ko:
   ko_rr:
   zh-TW:
