--- a/data/cards/40460013.yaml
+++ b/data/cards/40460013.yaml
@@ -7,8 +7,8 @@ name:
   fr: Catalyseur Zalamander
   it: Catalizzatore Zalamander
   pt: Catalisador Zalamander
-  ja:
-  ja_romaji:
+  ja: <ruby>炎<rt>えん</rt></ruby><ruby>魔<rt>ま</rt></ruby>の<ruby>触<rt>しょく</rt></ruby><ruby>媒<rt>ばい</rt></ruby>
+  ja_romaji: Enma no Shokubai
   ko:
   ko_rr:
   zh-TW:
