--- a/data/cards/77855162.yaml
+++ b/data/cards/77855162.yaml
@@ -7,8 +7,8 @@ name:
   fr: Entrainment Inclinant
   it: Entrainment Inclinato
   pt: Entrainment Inclinado
-  ja:
-  ja_romaji:
+  ja: <ruby>振<rt>ふり</rt></ruby><ruby>子<rt>こ</rt></ruby><ruby>特<rt>とっ</rt></ruby><ruby>急<rt>きゅう</rt></ruby>エントレインメント
+  ja_romaji: Furiko Tokkyū Entoreinmento
   ko:
   ko_rr:
   zh-TW:
