--- a/data/cards/96127902.yaml
+++ b/data/cards/96127902.yaml
@@ -7,8 +7,8 @@ name:
   fr: Boutique de Tenues de Sirène sur Mesure
   it: Allestitrice Abito da Sirena Fatto su Ordinazione
   pt: Alfaiataria de Roupa de Sereia Sob Medida
-  ja:
-  ja_romaji:
+  ja: かなり<ruby>魅<rt>み</rt></ruby><ruby>湧<rt>わ</rt></ruby>な<ruby>受<rt>じゅ</rt></ruby><ruby>注<rt>ちゅう</rt></ruby><ruby>水<rt>すい</rt></ruby><ruby>産<rt>さん</rt></ruby>
+  ja_romaji: Kanari Miwa na Juchū Suisan
   ko:
   ko_rr:
   zh-TW:
