--- a/data/cards/11765832.yaml
+++ b/data/cards/11765832.yaml
@@ -32,7 +32,9 @@ text:
   pt: |-
     2 monstros com o mesmo Tipo e Atributo, mas com nomes diferentes
     Qualquer dano de batalha que seu oponente sofrer das batalhas envolvendo este card é dobrado. Se este card for enviado para o Cemitério: você pode comprar 1 card. Você só pode usar este efeito de "Garura, Asas da Vida Ressonante" uma vez por turno.
-  ja:
+  ja: |-
+    同じ種族・属性でカード名が異なるモンスター×２
+    このカード名の②の効果は１ターンに１度しか使用できない。①：このカードの戦闘で発生する相手への戦闘ダメージは倍になる。②：このカードが墓地へ送られた場合に発動できる。自分はデッキから１枚ドローする。
   ko:
   zh-TW:
   zh-CN: |-
