--- a/data/cards/47759571.yaml
+++ b/data/cards/47759571.yaml
@@ -32,7 +32,9 @@ text:
   pt: |-
     2 Monstros de Efeito
     Quando um monstro para o qual este card apontar ativar seu efeito (exceto durante a Etapa de Dano) (Efeito Rápido): você pode escolher 1 Monstro de Efeito que seu oponente controla; até o final deste turno, mude o ATK dele para 0 e, além disso, negue seus efeitos. Durante a Fase Final, se este card estiver no Cemitério porque foi destruído em batalha ou por um efeito de card e enviado para lá neste turno: você pode Invocar este card por Invocação-Especial. Você só pode usar cada efeito de "Cabicavaleira Earlie" uma vez por turno.
-  ja:
+  ja: |-
+    効果モンスター２体
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードのリンク先のモンスターが効果を発動した時、相手フィールドの効果モンスター１体を対象として発動できる。ターン終了時まで、そのモンスターの攻撃力は０になり、効果は無効化される。②：このカードが戦闘・効果で破壊され墓地へ送られたターンのエンドフェイズに発動できる。このカードを特殊召喚する。
   ko:
   zh-TW:
   zh-CN: |-
