--- a/data/cards/10632284.yaml
+++ b/data/cards/10632284.yaml
@@ -26,7 +26,8 @@ text:
     Evoca Specialmente questa carta come Mostro con Effetto (Bestia/TERRA/Livello 2/ATK 0/DEF 2000). (Questa carta è ancora anche una Trappola.) Se questa carta è nella Zona Mostri (Effetto Rapido): puoi dichiarare 1 Tipo e 1 Attributo, poi scegliere come bersaglio 1 mostro scoperto sul Terreno; esso diventa di quel Tipo e Attributo, fino alla fine di questo turno. Puoi utilizzare questo effetto di "Elefante Mimesi" una sola volta per turno.
   pt: |-
     Invoque este card por Invocação-Especial como um Monstro de Efeito (Besta/TERRA/Nível 2/ATK 0/DEF 2000). (Este card ainda é considerado uma Armadilha.) Se este card estiver na Zona de Monstros (Efeito Rápido): você pode declarar 1 Tipo e 1 Atributo e, depois, escolha 1 monstro com a face para cima no campo; até o final deste turno, ele se torna desse Tipo e Atributo. Você só pode usar este efeito de "Elefante Mimese" uma vez por turno.
-  ja:
+  ja: |-
+    このカード名の②の効果は１ターンに１度しか使用できない。①：このカードは発動後、効果モンスター（獣族・地・星２・攻０／守２０００）となり、モンスターゾーンに特殊召喚する。このカードは罠カードとしても扱う。②：このカードがモンスターゾーンに存在する場合、種族と属性を１つずつ宣言し、フィールドの表側表示モンスター１体を対象として発動できる。そのモンスターはターン終了時まで宣言した種族・属性になる。この効果は相手ターンでも発動できる。
   ko:
   zh-TW:
   zh-CN: |-
